<resources>
    <string name="app_name">ChatApp</string>
    <string name="scrollSignIn">scrollSignIn</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="inputEmailHint">Email</string>
    <string name="inputPasswordHint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="scrollSignUp">scrollSignUp</string>
    <string name="add_image">Add Image</string>
    <string name="inputNameHint">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
</resources>